Made changes to fetchImage, HTML and CSS to allow for  random Pixabay images of Bergen to be set as background

--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,20 @@
 </head>
 
 <body>
-    <div class="text-container">
-        <h1>Været i Bergen akkurat nå!</h1>
-    </div>
-    <div class="image-container">
-        <img src="" alt="">
-    </div>
-    <div class="text-container">
-        <p class="weather-info"></p>
-    </div>
+    <div class="background-container">
+        <div class="text-container">
+            <h1>Været i Bergen akkurat nå!</h1>
+        </div>
 
+        <!-- <div class="image-container">
+        <img src="" alt=""> -->
 
+        <div class="text-container">
+            <p class="weather-info"></p>
+        </div>
+
+    </div>
+    </div>
 </body>
 <script src="App.js"></script>
 
